--- a/index.html
+++ b/index.html
@@ -900,12 +900,26 @@
 <p><span style="color: black; font-size: 150px; font-weight: bold;">Summary of the first 2 years</span></p>
 </div>
 </section>
+<section id="taxonomic-resolution" class="slide level2" data-auto-animate="true" style="font-size: 60px;">
+<h2 data-id="quarto-animate-title">Taxonomic resolution</h2>
+<div class="absolute" style="top: 0px; left: 95%; ">
+<div class="sectionhead">
+<p><span style="opacity:0.25">1</span> 2 <span style="opacity:0.25">3 4 5 6</span></p>
+</div>
+</div>
+<div class="absolute" style="bottom: 0%; right: -2%; ">
+<p><span style="color: black;">5</span></p>
+</div>
+</section>
 <section id="challenges-to-map-intertidal-vegetation" class="slide level2" data-auto-animate="true" style="font-size: 60px;">
 <h2 data-id="quarto-animate-title">Challenges to map intertidal vegetation</h2>
 <div class="absolute" style="top: 0px; left: 95%; ">
 <div class="sectionhead">
 <p><span style="opacity:0.25">1</span> 2 <span style="opacity:0.25">3 4 5 6</span></p>
 </div>
+</div>
+<div class="absolute" style="bottom: 0%; right: -2%; ">
+<p><span style="color: black;">6</span></p>
 </div>
 <div class="absolute fragment fade-out" data-id="SpectralSignature" data-fragment-index="1" style="top: 14%; left: -2%; ">
 <p><img data-src="Images/Figure_Hyperspectral.png" height="630"></p>
@@ -966,6 +980,9 @@
 <p><span style="opacity:0.25">1</span> 2 <span style="opacity:0.25">3 4 5 6</span></p>
 </div>
 </div>
+<div class="absolute" style="bottom: 0%; right: -2%; ">
+<p><span style="color: black;">7</span></p>
+</div>
 <div class="absolute" data-id="SpectralSignature" style="top: 45%; left: -2%; ">
 <p><img data-src="Images/Figure_Hyperspectral_Instru.png" height="600"></p>
 </div>
@@ -982,6 +999,9 @@
 <div class="sectionhead">
 <p><span style="opacity:0.25">1</span> 2 <span style="opacity:0.25">3 4 5 6</span></p>
 </div>
+</div>
+<div class="absolute" style="bottom: 0%; right: -2%; ">
+<p><span style="color: black;">7</span></p>
 </div>
 <div class="absolute" style="top: 10%; left: 0%; ">
 <p><img data-src="Images/BedePaperCover.png" height="450"></p>
@@ -1019,6 +1039,9 @@
 <p><span style="opacity:0.25">1</span> 2 <span style="opacity:0.25">3 4 5 6</span></p>
 </div>
 </div>
+<div class="absolute" style="bottom: 0%; right: -2%; ">
+<p><span style="color: black;">8</span></p>
+</div>
 <div class="absolute" style="top: 7%; left: -2%; ">
 <p><video data-src="Videos/Flight_Matrice200.mp4" height="1200" controls=""><a href="Videos/Flight_Matrice200.mp4">Video</a></video></p>
 </div>
@@ -1038,6 +1061,9 @@
 <div class="sectionhead">
 <p><span style="opacity:0.25">1</span> 2 <span style="opacity:0.25">3 4 5 6</span></p>
 </div>
+</div>
+<div class="absolute" style="bottom: 0%; right: -2%; ">
+<p><span style="color: black;">9</span></p>
 </div>
 <div class="absolute" style="top: 10%; right: 0%; ">
 <p><img data-src="Images/Fig1_Map_Drone_Sites.png" height="1200"></p>
@@ -1122,22 +1148,40 @@ tr:nth-child(4) {
 <p><span style="opacity:0.25">1</span> 2 <span style="opacity:0.25">3 4 5 6</span></p>
 </div>
 </div>
+<div class="absolute" style="bottom: 0%; right: -2%; ">
+<p><span style="color: black;">10</span></p>
+</div>
 <div class="absolute" data-id="2alt" style="font-size: 80px; color: rgba(0,0,0,0);top: -0%; left: 0%; ">
 <p>2 altitudes = 2 purposes</p>
 </div>
-<div class="absolute" style="top: 10%; left: -2%; ">
-<p><img data-src="Images/Graphical_Abstract.png" height="1150"></p>
+<div class="absolute fragment fade-out" data-fragment-index="1" style="top: 10%; left: -2%; ">
+<p><img data-src="Images/Graphical_Abstract1.png" height="1150"></p>
 </div>
-<div class="absolute fragment fade-in" data-fragment-index="1" style="top: 8%; left: 26%; ">
+<div class="absolute fragment fade-in" data-fragment-index="1" style="top: 10%; left: -2%; ">
+<p><img data-src="Images/Graphical_Abstract2.png" height="1150"></p>
+</div>
+<div class="absolute fragment fade-out" data-fragment-index="1" style="top: 15%; right: -2%; ">
+<p><img data-src="Images/Figure3_workflow1.png" height="1000"></p>
+</div>
+<div class="absolute fragment fade-in-then-out" data-fragment-index="1" style="top: 15%; right: -2%; ">
+<p><img data-src="Images/Figure3_workflow2.png" height="1000"></p>
+</div>
+<div class="absolute fragment fade-in" data-fragment-index="2" style="top: 8%; left: 26%; ">
 <p><img data-src="Images/Gaf_Low_RGB.png" height="1200"></p>
 </div>
-<div class="absolute fragment fade-in" data-fragment-index="1" style="font-size: 30px;top: 34%; left: 63%; ">
+<div class="absolute fragment fade-in" data-fragment-index="2" style="font-size: 40px; color: red;top: 7%; left: 66%; ">
+<p>10m</p>
+</div>
+<div class="absolute fragment fade-in" data-fragment-index="2" style="font-size: 40px; color: red; transform: rotate(90deg);top: 18%; left: 73.5%; ">
+<p>10m</p>
+</div>
+<div class="absolute fragment fade-in" data-fragment-index="2" style="font-size: 30px;top: 34%; left: 63%; ">
 <p>~ 1.5 millions pixels</p>
 </div>
-<div class="absolute fragment fade-in" data-fragment-index="2" style="top: 25%; right: -2%; ">
+<div class="absolute fragment fade-in" data-fragment-index="3" style="top: 25%; right: -2%; ">
 <p><img data-src="Images/table_training_px.png" height="350"></p>
 </div>
-<div class="absolute fragment fade-in" data-fragment-index="2 " data-id="training_px" style="font-size: 50px;top: 65%; right: 2%; ">
+<div class="absolute fragment fade-in" data-fragment-index="3" data-id="training_px" style="font-size: 50px;top: 65%; right: 2%; ">
 <p>~ 500 000 training pixels</p>
 </div>
 </section>
@@ -1147,6 +1191,9 @@ tr:nth-child(4) {
 <div class="sectionhead">
 <p><span style="opacity:0.25">1</span> 2 <span style="opacity:0.25">3 4 5 6</span></p>
 </div>
+</div>
+<div class="absolute" style="bottom: 0%; right: -2%; ">
+<p><span style="color: black;">11</span></p>
 </div>
 <div class="fragment fade-out" data-fragment-index="3">
 <div class="absolute" data-id="training_px" style="font-size: 50px;top: 45%; left: -3%; ">
@@ -1192,6 +1239,9 @@ tr:nth-child(4) {
 <p><span style="opacity:0.25">1</span> 2 <span style="opacity:0.25">3 4 5 6</span></p>
 </div>
 </div>
+<div class="absolute" style="bottom: 0%; right: -2%; ">
+<p><span style="color: black;">12</span></p>
+</div>
 <div class="absolute" data-id="DISCOV" style="top: 25%; left: 40%; ">
 <p><img data-src="Images/DISCOV_logo.png" height="550"></p>
 </div>
@@ -1233,6 +1283,9 @@ tr:nth-child(4) {
 <p><span style="opacity:0.25">1</span> 2 <span style="opacity:0.25">3 4 5 6</span></p>
 </div>
 </div>
+<div class="absolute" style="bottom: 0%; right: -2%; ">
+<p><span style="color: black;">13</span></p>
+</div>
 <div class="absolute" style="top: 30%; left: 5%; ">
 <p><img data-src="Images/table_validation_.png" height="450"></p>
 </div>
@@ -1246,6 +1299,9 @@ tr:nth-child(4) {
 <div class="sectionhead">
 <p><span style="opacity:0.25">1</span> 2 <span style="opacity:0.25">3 4 5 6</span></p>
 </div>
+</div>
+<div class="absolute" style="bottom: 0%; right: -2%; ">
+<p><span style="color: black;">14</span></p>
 </div>
 <div class="absolute fragment fade-out" data-fragment-index="1" style="top: 20%; left: -2%; ">
 <p><img data-src="Images/FigX-Boat_Pred2.png" height="850"></p>
@@ -1264,18 +1320,22 @@ tr:nth-child(4) {
 <p><span style="opacity:0.25">1</span> 2 <span style="opacity:0.25">3 4 5 6</span></p>
 </div>
 </div>
+<div class="absolute" style="bottom: 0%; right: -2%; ">
+<p><span style="color: black;">15</span></p>
+</div>
 <div class="fragment fade-out" data-fragment-index="3">
 <div class="absolute fragment fade-in" data-fragment-index="1" style="top: 15%; left: 0%; ">
 <p><img data-src="Images/TableVIP1.png" height="400"></p>
 </div>
 </div>
-<div class="fragment fade-out" data-fragment-index="5">
+<div class="fragment fade-out" data-fragment-index="6">
 <div class="absolute fragment fade-in" data-fragment-index="3" style="top: 15%; left: 0%; ">
 <p><img data-src="Images/TableVIP1_1.png" height="400"></p>
 </div>
 <div class="absolute fragment fade-in" data-fragment-index="3" style="top: 55%; left: 0%; ">
 <p><img data-src="Images/TableVIP2_1.png" height="400"></p>
 </div>
+<div class="fragment fade-out" data-fragment-index="5">
 <div class="absolute fragment fade-in" data-fragment-index="2" style="top: 25%; right: 3.3%; ">
 <p>Accuracy = <span style="color: green"><strong>a</strong></span></p>
 </div>
@@ -1283,8 +1343,38 @@ tr:nth-child(4) {
 <p>Accuracy = <span style="color: green"><strong>a</strong></span> ± <span style="color: red"><strong>b</strong></span></p>
 </div>
 </div>
-<div class="absolute fragment fade-in-then-out" data-fragment-index="5" style="top: 10%; left: 20%; ">
+<div class="absolute fragment fade-in" data-fragment-index="5" style="font-size: 30px;top: 50%; right: 7%; ">
+<p><span style="color: red"><strong>b</strong></span></p>
+</div>
+<div class="absolute fragment fade-in" data-fragment-index="5" style="font-size: 30px;top: 55%; right: 0%; ">
+<p>B10 is not important for the model</p>
+</div>
+<div class="absolute fragment fade-in" data-fragment-index="5" style="font-size: 70px;top: 75%; right: 7%; ">
+<p><span style="color: red"><strong>b</strong></span></p>
+</div>
+<div class="absolute fragment fade-in" data-fragment-index="5" style="font-size: 30px;top: 85%; right: 0%; ">
+<p>B10 is important for the model</p>
+</div>
+</div>
+<div class="absolute fragment fade-in-then-out" data-fragment-index="6" style="top: 10%; left: 20%; ">
 <p><img data-src="Images/Fig_VIP.png" height="1150"></p>
+</div>
+</section>
+<section id="submission-to-a-journal" class="slide level2" data-auto-animate="true" style="font-size: 60px;">
+<h2 data-id="quarto-animate-title">Submission to a Journal</h2>
+<div class="absolute" style="top: 0px; left: 95%; ">
+<div class="sectionhead">
+<p><span style="opacity:0.25">1</span> 2 <span style="opacity:0.25">3 4 5 6</span></p>
+</div>
+</div>
+<div class="absolute" style="bottom: 0%; right: -2%; ">
+<p><span style="color: black;">16</span></p>
+</div>
+<div class="absolute" style="top: 10%; left: 10%; ">
+<p><img data-src="Images/RSE.jpg" height="500"></p>
+</div>
+<div class="absolute fragment fade-in" data-fragment-index="1" style="left: 10%; bottom: 10%; ">
+<p><img data-src="Images/STOTEN.jpg" height="500"></p>
 </div>
 </section>
 <section id="the-model" class="slide level2" data-auto-animate="true" style="font-size: 60px;">
@@ -1293,6 +1383,9 @@ tr:nth-child(4) {
 <div class="sectionhead">
 <p><span style="opacity:0.25">1</span> 2 <span style="opacity:0.25">3 4 5 6</span></p>
 </div>
+</div>
+<div class="absolute" style="bottom: 0%; right: -2%; ">
+<p><span style="color: black;">17</span></p>
 </div>
 <div class="fragment fade-out" data-fragment-index="3">
 <div class="absolute" style="top: 10%; left: 40%; ">
@@ -1315,6 +1408,9 @@ tr:nth-child(4) {
 <div class="sectionhead">
 <p><span style="opacity:0.25">1</span> 2 <span style="opacity:0.25">3 4 5 6</span></p>
 </div>
+</div>
+<div class="absolute" style="bottom: 0%; right: -2%; ">
+<p><span style="color: black;">16</span></p>
 </div>
 <div class="absolute" data-id="gitrepo" style="left: 0%; ">
 <iframe width="1000" height="1100" src="Data/git_repo_DISCOV/DISCOV-MicaSense.htm" title="Webpage example"></iframe>
