nothing has changed

--- a/index.html
+++ b/index.html
@@ -1373,8 +1373,20 @@ tr:nth-child(4) {
 <div class="absolute" style="top: 10%; left: 10%; ">
 <p><img data-src="Images/RSE.jpg" height="500"></p>
 </div>
-<div class="absolute fragment fade-in" data-fragment-index="1" style="left: 10%; bottom: 10%; ">
+<div class="absolute fragment fade-in" data-fragment-index="1" style="top: 40%; left: 10%; ">
 <p><img data-src="Images/STOTEN.jpg" height="500"></p>
+</div>
+<div class="absolute fragment fade-in" data-fragment-index="2" style="top: 70%; left: 10%; ">
+<p><img data-src="Images/STOTEN.jpg" height="500"></p>
+</div>
+<div class="absolute fragment fade-in" data-fragment-index="1" style="font-size: 50px;top: 10%; left: 40%; ">
+<ul>
+<li>Pre-trained model DISCOV V1, ready to be used</li>
+<li>Training dataset</li>
+<li>Validation dataset</li>
+<li>Script to train a new model, with updated training dataset</li>
+<li>Script to predict on new data</li>
+</ul>
 </div>
 </section>
 <section id="the-model" class="slide level2" data-auto-animate="true" style="font-size: 60px;">
