change of the days

--- a/index.html
+++ b/index.html
@@ -1395,7 +1395,7 @@ tr:nth-child(4) {
 </ul></li>
 </ul>
 </div>
-<div class="absolute fragment fade-in" data-fragment-index="2" style="font-size: 50px;top: 60%; left: 30%; ">
+<div class="absolute fragment fade-in" data-fragment-index="2" style="font-size: 50px;top: 65%; left: 30%; ">
 <ul>
 <li>The Journal of Photogrammetry and Remote Sensing
 <ul>
@@ -1447,7 +1447,7 @@ tr:nth-child(4) {
 <li>Pre-trained model DISCOV V1, ready to be used</li>
 <li>Training dataset</li>
 <li>Validation dataset</li>
-<li>Script to train a new model, with updated training dataset</li>
+<li>Script to train a new model with an updated training dataset</li>
 <li>Script to predict on new data</li>
 </ul>
 </div>
@@ -1491,7 +1491,7 @@ tr:nth-child(4) {
       // Full list of configuration options available at:
       // https://revealjs.com/config/
       Reveal.initialize({
-'controlsAuto': true,
+'controlsAuto': false,
 'previewLinksAuto': false,
 'pdfSeparateFragments': false,
 'autoAnimateEasing': "ease",
@@ -1501,11 +1501,11 @@ tr:nth-child(4) {
 'smaller': false,
  
         // Display controls in the bottom right corner
-        controls: false,
+        controls: true,
 
         // Help the user learn the controls by providing hints, for example by
         // bouncing the down arrow when they first encounter a vertical slide
-        controlsTutorial: false,
+        controlsTutorial: true,
 
         // Determines where controls appear, "edges" or "bottom-right"
         controlsLayout: 'edges',
