--- a/index.html
+++ b/index.html
@@ -1478,8 +1478,8 @@ tr:nth-child(4) {
 <p><span style="color: black; font-size: 150px; font-weight: bold;">DISCOV model - Application and Update for <em>Gracilaria vermiculophylla</em> prediction</span></p>
 </div>
 </section>
-<section id="invasea---sited-presentation" class="slide level2" data-auto-animate="true" style="font-size: 60px;">
-<h2 data-id="quarto-animate-title">INVASEA - Sited presentation</h2>
+<section id="invasea" class="slide level2" data-auto-animate="true" style="font-size: 60px;">
+<h2 data-id="quarto-animate-title">INVASEA</h2>
 <div class="absolute" style="top: 0px; left: 95%; ">
 <div class="sectionhead">
 <p><span style="opacity:0.25">1 2 3</span> 4 <span style="opacity:0.25">5 6</span></p>
@@ -1488,8 +1488,71 @@ tr:nth-child(4) {
 <div class="absolute" style="bottom: 0%; right: -2%; ">
 <p><span style="color: black;">18</span></p>
 </div>
-<div class="absolute" style="top: 10%; left: -5%; ">
-<p><img data-src="Images/Map_sites_INVASEA.png" width="1300"></p>
+<div class="absolute" style="top: 10%; right: -3%; ">
+<p><img data-src="Images/CNES.png" width="300"></p>
+</div>
+<div class="absolute fragment fade-out" data-fragment-index="1" style="font-size: 50px;top: 10%; left: 0%; ">
+<ul>
+<li>2 years long project founded by the french space agency</li>
+</ul>
+</div>
+<div class="absolute fragment fade-in-then-out" data-fragment-index="1" style="font-size: 50px;top: 10%; left: 0%; ">
+<ul>
+<li>2 years long project founded by the french space agency</li>
+<li>Aim to develop an algorithm to detect and monitor invasive macroalgae using Sentinel-2</li>
+</ul>
+</div>
+<div class="absolute fragment fade-in" data-fragment-index="2" style="font-size: 50px;top: 10%; left: 0%; ">
+<ul>
+<li>2 years long project founded by the french space agency</li>
+<li>Aim to develop an algorithm to detect and monitor <span style="color: red;">invasive</span> macroalgae using Sentinel-2</li>
+</ul>
+<p><em>Gracilaria vermiculophylla</em></p>
+</div>
+<div class="absolute fragment fade-in" data-fragment-index="2" style="top: 30%; left: 0%; ">
+<p><img data-src="Images/Gracillaria.jpg" width="500"></p>
+</div>
+<div class="absolute fragment fade-in-then-out" data-fragment-index="3" style="top: 30%; left: 30%; ">
+<p><img data-src="Images/maps_Gracillaria_Origins.png" width="1600"></p>
+</div>
+<div class="absolute fragment fade-in-then-out" data-fragment-index="3" style="font-size: 40px;left: 30%; bottom: 12%; ">
+<p>Mendoza-Segura et al.&nbsp;(2023)</p>
+</div>
+<div class="absolute fragment fade-in" data-fragment-index="4" data-id="Gracillaria" style="top: 30%; left: 30%; ">
+<p><img data-src="Images/20240410_112100.jpg" width="1600"></p>
+</div>
+<div class="absolute fragment fade-in" data-fragment-index="4" style="font-size: 40px;left: 30%; bottom: 12%; ">
+<p>Belon Estuary, Brittany, the 10th of April 2024</p>
+</div>
+</section>
+<section id="invasea---study-sites" class="slide level2" data-auto-animate="true" style="font-size: 60px;">
+<h2 data-id="quarto-animate-title">INVASEA - Study sites</h2>
+<div class="absolute" style="top: 0px; left: 95%; ">
+<div class="sectionhead">
+<p><span style="opacity:0.25">1 2 3</span> 4 <span style="opacity:0.25">5 6</span></p>
+</div>
+</div>
+<div class="absolute" style="bottom: 0%; right: -2%; ">
+<p><span style="color: black;">19</span></p>
+</div>
+<div class="absolute" style="top: 10%; left: -3%; ">
+<p><img data-src="Images/Map_sites_INVASEA1.png" width="1300"></p>
+</div>
+<div class="absolute" data-id="Gracillaria" style="top: 3%; left: 42%; ">
+<p><img data-src="Images/20240410_112100.jpg" width="800"></p>
+</div>
+</section>
+<section id="slide-with-map" class="slide level2">
+<h2>Slide with Map</h2>
+<div class="fragment" data-fragment-index="1">
+<iframe src="map.html" width="100%" height="800px" id="map-frame" style="border:none;">
+</iframe>
+</div>
+<div class="fragment" data-fragment-index="2">
+<!-- This fragment will trigger the first animation -->
+</div>
+<div class="fragment" data-fragment-index="3">
+<!-- This fragment will trigger the first animation -->
 </div>
 <div class="quarto-auto-generated-content">
 <p><img src="Images/nantes-universite.png" class="slide-logo"></p>
