--- a/index.html
+++ b/index.html
@@ -319,6 +319,13 @@
       margin-right: 0; 
     }
   </style>
+  <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css">
+  <style>
+    #map {
+        height: 600px; /* Adjust the height of the map */
+        width: 100%;
+    }
+  </style>
 </head>
 <body class="quarto-light">
   <div class="reveal">
@@ -1544,13 +1551,22 @@ tr:nth-child(4) {
 </section>
 <section id="slide-with-map" class="slide level2">
 <h2>Slide with Map</h2>
-<iframe src="map.html" width="100%" height="800px" id="map-frame" style="border:none;">
-</iframe>
-<div class="fragment" data-fragment-index="2">
-<!-- This fragment will trigger the first animation -->
+<div class="absolute" style="top: 10%; left: 0%; ">
+<div id="map" style="height: 1000px; width: 800px;">
+
 </div>
-<div class="fragment" data-fragment-index="3">
-<!-- This fragment will trigger the first animation -->
+<p class="fragment" data-fragment-index="0">
+Fly to London
+</p>
+<p class="fragment" data-fragment-index="1">
+Fly to Paris
+</p>
+<p class="fragment" data-fragment-index="2">
+Fly to New York
+</p>
+<p class="fragment" data-fragment-index="3">
+Fly to Tokyo
+</p>
 </div>
 <div class="quarto-auto-generated-content">
 <p><img src="Images/nantes-universite.png" class="slide-logo"></p>
@@ -1961,6 +1977,8 @@ tr:nth-child(4) {
       }
     });
     </script>
+    <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+    <script src="script.js"></script>
     
 
 </body></html>
