add wanderfull map

--- a/index.html
+++ b/index.html
@@ -1549,24 +1549,44 @@ tr:nth-child(4) {
 <p><img data-src="Images/20240410_112100.jpg" width="800"></p>
 </div>
 </section>
-<section id="slide-with-map" class="slide level2">
-<h2>Slide with Map</h2>
+<section id="invasea---study-sites-1" class="slide level2" data-auto-animate="true" style="font-size: 60px;">
+<h2 data-id="quarto-animate-title">INVASEA - Study sites</h2>
+<div class="absolute" style="top: 0px; left: 95%; ">
+<div class="sectionhead">
+<p><span style="opacity:0.25">1 2 3</span> 4 <span style="opacity:0.25">5 6</span></p>
+</div>
+</div>
+<div class="absolute" style="bottom: 0%; right: -2%; ">
+<p><span style="color: black;">19</span></p>
+</div>
 <div class="absolute" style="top: 10%; left: 0%; ">
 <div id="map" style="height: 1000px; width: 800px;">
 
 </div>
-<p class="fragment" data-fragment-index="0">
-Fly to London
-</p>
-<p class="fragment" data-fragment-index="1">
-Fly to Paris
-</p>
-<p class="fragment" data-fragment-index="2">
-Fly to New York
-</p>
-<p class="fragment" data-fragment-index="3">
-Fly to Tokyo
-</p>
+</div>
+<div class="fragment" data-fragment-index="1">
+<!-- This fragment will trigger the first animation -->
+</div>
+<div class="fragment" data-fragment-index="2">
+<!-- This fragment will trigger the first animation -->
+</div>
+<div class="fragment" data-fragment-index="3">
+<!-- This fragment will trigger the first animation -->
+</div>
+<div class="fragment" data-fragment-index="4">
+<!-- This fragment will trigger the first animation -->
+</div>
+<div class="fragment" data-fragment-index="5">
+<!-- This fragment will trigger the first animation -->
+</div>
+<div class="fragment" data-fragment-index="6">
+<!-- This fragment will trigger the first animation -->
+</div>
+<div class="fragment" data-fragment-index="7">
+<!-- This fragment will trigger the first animation -->
+</div>
+<div class="fragment" data-fragment-index="8">
+<!-- This fragment will trigger the first animation -->
 </div>
 <div class="quarto-auto-generated-content">
 <p><img src="Images/nantes-universite.png" class="slide-logo"></p>
