--- a/index.html
+++ b/index.html
@@ -758,7 +758,7 @@
 <div class="fragment fade-in-then-out" data-fragment-index="8">
 <p><span style="position: absolute; left: 1200px; top: 1150px; height: 110px; width: 785px; background-color: #FFFFFF; padding: 20px; padding-left: 50px; font-size: 20px; text-align: center; color:#292626 ">Papathanasopoulou, E., Simis, S., Alikas, K., Ansper, A., Anttila, S., Jenni, A., Barillé, A.-L., Barillé, L., Brando, V., Bresciani, M., Bučas, M., Gernez, P., Giardino, C., Harin, N., Hommersom, A., Kangro, K., Kauppila, P., Koponen, S., Laanen, M., … Zoffoli, M. L. (2019). Satellite-assisted monitoring of water quality to support the implementation of the Water Framework Directive. In EOMORES white paper. https://doi.org/10.5281/zenodo.3463051</span></p>
 </div>
-<div class="absolute fragment fade-in" data-id="Mullerlegend" data-fragment-index="12" style="top: 15%; right: 15%; ">
+<div class="absolute fragment fade-in" data-id="Mullerlegend" data-fragment-index="11" style="top: 15%; right: 15%; ">
 <p><span style="font-size: 40px">Muller-Karger et al.&nbsp;(2018)</span></p>
 </div>
 <div class="absolute fragment fade-in" data-fragment-index="9" style="top: 10%; left: 0%; ">
@@ -846,7 +846,7 @@
 <p><img data-src="Images/MHW.png" height="400"></p>
 </div>
 <div class="absolute fragment fade-in" data-fragment-index="4" style="top: 60%; left: 65%; ">
-<p><img data-src="Images/riverdischarge.png" height="500"></p>
+<p><img data-src="Images/riverDischarge.png" height="500"></p>
 </div>
 <div class="absolute fragment fade-in" data-fragment-index="4" style="top: 55%; left: 8%; ">
 <p><span style="font-size: 40px">Sea Surface Temperature</span></p>
@@ -1542,23 +1542,6 @@ tr:nth-child(4) {
 <div class="absolute" style="bottom: 0%; right: -2%; ">
 <p><span style="color: black;">19</span></p>
 </div>
-<div class="absolute" style="top: 10%; left: -3%; ">
-<p><img data-src="Images/Map_sites_INVASEA1.png" width="1300"></p>
-</div>
-<div class="absolute" data-id="Gracillaria" style="top: 3%; left: 42%; ">
-<p><img data-src="Images/20240410_112100.jpg" width="800"></p>
-</div>
-</section>
-<section id="invasea---study-sites-1" class="slide level2" data-auto-animate="true" style="font-size: 60px;">
-<h2 data-id="quarto-animate-title">INVASEA - Study sites</h2>
-<div class="absolute" style="top: 0px; left: 95%; ">
-<div class="sectionhead">
-<p><span style="opacity:0.25">1 2 3</span> 4 <span style="opacity:0.25">5 6</span></p>
-</div>
-</div>
-<div class="absolute" style="bottom: 0%; right: -2%; ">
-<p><span style="color: black;">19</span></p>
-</div>
 <div class="absolute" style="top: 10%; left: 0%; ">
 <div id="map" style="height: 1180px; width: 800px;">
 
@@ -1635,11 +1618,11 @@ tr:nth-child(4) {
 <div class="absolute" style="top: 10%; left: 40%; ">
 <p>Pont l’Abbe, 12th of April 2024</p>
 </div>
-<div class="absolute" style="top: 28%; left: 67%; ">
-<p><img data-src="Images/Abbe_Phaeo.jpg" width="400"></p>
+<div class="absolute" style="top: 25%; right: -3%; ">
+<p><img data-src="Images/picnic_Abbe.jpg" width="460"></p>
 </div>
-<div class="absolute" style="top: 28%; right: 0%; ">
-<p><img data-src="Images/Abbe_Rhodo.jpg" width="400"></p>
+<div class="absolute" style="top: 25%; left: 38%; ">
+<p><img data-src="Images/Quadrat_Abbe.jpg" width="1100"></p>
 </div>
 </div>
 <div class="fragment fade-in-then-out" data-fragment-index="6">
@@ -1648,18 +1631,24 @@ tr:nth-child(4) {
 <p>Northern Spain Estuaries, June 2024</p>
 <ul>
 <li>Santander, the 22nd and 23rd of June 2024</li>
-<li>Somewhere between Santander and Vigo, the 25th and 26th of June 2024</li>
-<li>Vigo, the 27th and 28th of June 2024</li>
+<li>Somewhere between Santander and Vigo, the 24th and 25th of June 2024</li>
+<li>Vigo, the 26th, 27th and 28th of June 2024</li>
 </ul>
 </div>
 </div>
 <div class="fragment" data-fragment-index="7">
 <!-- This fragment will trigger the Santander animation -->
+<div class="absolute" style="top: 10%; left: 40%; ">
+<p>Santander, the 22nd and 23rd of June 2024</p>
+</div>
+<div class="absolute" style="top: 25%; left: 38%; ">
+<p><img data-src="Images/Quadrat_Abbe.jpg" width="1100"></p>
+</div>
 </div>
 <div class="fragment" data-fragment-index="8">
 <!-- This fragment will trigger the  ???  animation -->
 </div>
-<div class="fragment" data-fragment-index="8">
+<div class="fragment" data-fragment-index="9">
 <!-- This fragment will trigger the Vigoanimation -->
 </div>
 <div class="quarto-auto-generated-content">
