--- a/index.html
+++ b/index.html
@@ -1684,12 +1684,21 @@ tr:nth-child(4) {
 <p><strong>Vigo, the 26th, 27th and 28th of June 2024</strong></p>
 </div>
 <div class="absolute" style="top: 17%; left: 40%; ">
-<p><img data-src="Images/Vigo_Rhodo.jpeg" height="550"></p>
+<p><img data-src="Images/Vigo_Rhodo.jpeg" height="500"></p>
 </div>
-<div class="absolute" style="top: 17%; right: 0%; ">
-<p><img data-src="Images/Group_Marta.JPG" height="550"></p>
+<div class="absolute" style="top: 17%; right: 8%; ">
+<p><img data-src="Images/Group_Marta.JPG" height="500"></p>
 </div>
+<p>::: {.absolute} <video id="droneVideoVigo" muted="" autoplay="" height="550"> <source src="Videos/Marta_Sampling.mp4" type="video/mp4"> Your browser does not support the video tag. </video></p>
+<style>
+  #droneVideoVigo {
+    position: absolute;
+    top: 57%;
+    left: 40%;
+  }
+</style>
 </div>
+<p>:::</p>
 <div class="quarto-auto-generated-content">
 <p><img src="Images/nantes-universite.png" class="slide-logo"></p>
 <div class="footer footer-default">
